XWIKI-21922: Introduce methods to fetch a subset of revisions in XWikiVersioningStoreInterface
* Fix minor version filtering
* Improve style and documentation